@@ -1,3 +1,8 @@
+2012-03-18  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* configuration.cc (MUSIC): Added comment with syntax of
+	_MUSIC_CONFIG_.
+
 2012-03-15  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* music/setup.hh, setup.cc (maybePostponedSetup, fullInit): New
